fixed the horizontal scroll

--- a/app.css
+++ b/app.css
@@ -2,7 +2,8 @@ body {
   background-color: #f5d9df;
   font-family: "Nunito", sans-serif;
   text-transform: uppercase;
-  scroll-behavior: smooth;
+  scroll-behavior: smooth; 
+  overflow-x: hidden;
 }
 
 #mainNavbar {
@@ -45,6 +46,7 @@ body {
   background-color: #c2ebf9;
   transition: background-color 200ms linear;
 }
+
 
 @media (max-width: 1250px) {
   #headingGroup h1 {
